Fix: Broken Course Badge on Mobile
Because:
* The course badge was positioned a little wrong for mobile.

--- a/app/assets/stylesheets/components/progress_circle.scss
+++ b/app/assets/stylesheets/components/progress_circle.scss
@@ -40,8 +40,8 @@ $back-color: #dddddd;
     top: 2px;
     left: 2px;
     @media (max-width: 991px){
-      top: -8px;
-      left: -8px;
+      top: 0px;
+      left: 0px;
     }
   }
 
